test/syc/bad/escseqinv.c
/*
 * Invalid hexadecimal escape sequence
 */

/* Invalid hexadecimal escape sequence */
int inv = '\xG';
